# monome-rack

./: .gitattributes  .gitignore  .gitmodules  DEVELOPING.md  Makefile  README.md  dev_win.sh  grid.cpp  grid.hpp  mkdocs.yml  monomemodulebase.cpp  monomemodulebase.hpp  plugin.cpp  plugin.json  whitewhale.cpp  whitewhale.hpp
.github/: ISSUE_TEMPLATE.md  main.workflow
.github/ISSUE_TEMPLATE/: bug-report.md  build-error.md
.github/workflows/: build-plugin.yaml  build_branches.yaml  build_latest.yaml  build_plugin.yaml  deploy-pages.yml
docs/: index.html
docs/content/: extra.css  help.md  index.md
docs/custom-theme/: main.html
firmware/: ansible.mk  common.mk  compile.mk  earthsea.mk  meadowphysics.mk  teletype.mk  whitewhale.mk
firmware/mock_hardware/: adapter.c  adapter_not_ansible.c  adapter_not_teletype.c  adapter_teletype.c  adapter_trilogy.c  ansible_usb_disk.c  mock_hardware.c  mock_hardware.h  mock_hardware_api.c  mock_hardware_api.h  mock_hardware_api_private.h  mock_interrupt.c  mock_interrupt.h  mock_serial.c  mock_serial.h  monome.c  monome_tt.c
lib/base64/: README.md
lib/cbbq/: LICENSE.md  README.md  cbbq.h
lib/serialosc/: MonomeDevice.h  README.md  SerialOsc.cpp  SerialOsc.h
lib/simple-svg/: CMakeLists.txt  LICENSE  README.md  main_1.0.0.cpp  simple_svg_1.0.0.hpp
mock_hardware/: adapter.c  mock_hardware.c  mock_hardware.h
mock_hardware/stubs/: compiler.h  print_funcs.h
presets/teletype/: 00_TRIANGLE MOUNTAIN.vcvm  01_RANDOMS.vcvm  02_HIDDEN PATH NO PATH.vcvm  (+3 more)
src/: plugin.cpp
virtual_avr/: virtual_gpio.c  virtual_gpio.h
(+285 files in other folders)
